# ProgrammingLanguages

./: CMakeLists.txt  contacts.c  main.c
task1/: main.c
task2/: contacts.c  maibn.c  main.c
task3/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h
task7/: CMakeLists.txt  lazy_string.cpp  lazy_string.h
